# mcpelauncher-cm-api

./: .clang-format  CMakeLists.txt  README.md  map.txt  mcpelauncher_cm_api.def
example/: CMakeLists.txt  example.cpp
include/cm/: rtti.hpp  shared_object.hpp
scripts/: symbols.py
src/: main.cpp  rtti.cpp  shared_object.cpp  string_hash.hpp
